# amdgpu_top

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO  build.rs  installation_script.sh  io.github.umio_yasuno.amdgpu_top.release.xml  io.github.umio_yasuno.amdgpu_top.releases.xml
.github/workflows/: check.yml  release.yml
assets/: amdgpu_top-smi.desktop  amdgpu_top-tui.desktop  amdgpu_top.desktop  io.github.umio_yasuno.amdgpu_top.metainfo.xml
assets/flatpak/: README.md  generated-sources.json  org.umioyasuno.amdgpu_top.json
crates/amdgpu_top_gui/: Cargo.toml  i18n.toml
crates/amdgpu_top_gui/i18n/en/: amdgpu_top_gui.ftl
crates/amdgpu_top_gui/i18n/ja/: amdgpu_top_gui.ftl
crates/amdgpu_top_gui/i18n/ka/: amdgpu_top_gui.ftl
crates/amdgpu_top_gui/src/: app.rs  app_device_info.rs  gui_app_data.rs  gui_device_info.rs  gui_gpu_metrics.rs  lib.rs  localize.rs  server.rs  tab_gui.rs  util.rs
crates/amdgpu_top_json/: Cargo.toml
crates/amdgpu_top_json/src/: dump.rs  lib.rs  output_json.rs
crates/amdgpu_top_tui/: Cargo.toml
crates/amdgpu_top_tui/src/: app.rs  lib.rs  smi.rs
crates/amdgpu_top_tui/src/view/: activity.rs  fdinfo.rs  gpu_metrics.rs  memory_error_count.rs  mod.rs  perf_counter.rs  sensors.rs  util.rs  vram.rs  xdna_fdinfo.rs
crates/libamdgpu_top/: Cargo.toml  README.md
crates/libamdgpu_top/src/: app.rs  app_device_info.rs  device_path.rs  drm_mode.rs  gfx_target_version.rs  lib.rs  ppfeaturemask.rs
crates/libamdgpu_top/src/stat/: cpu_freq.rs  fdinfo.rs  gfxoff_state.rs  gpu_activity.rs  gpu_metrics_util.rs  hwmon_power.rs  hwmon_temp.rs  mod.rs  pcie_bw.rs  perf_counter.rs  power_cap.rs  sensors.rs
crates/libamdgpu_top/src/stat/fdinfo/: amdgpu_fdinfo.rs  amdgpu_fdinfo_sort.rs  mod.rs  proc_info.rs
crates/libamdgpu_top/src/xdna/: README.md  bindings.rs  fdinfo_sample.txt  ioctl.rs  mod.rs  xdna_device_path.rs  xdna_fdinfo.rs  xdna_fdinfo_stat.rs
crates/libamdgpu_top/src/xdna/header/: amdxdna_accel.h
docs/: GPU_METRICS.md  NOTE.md  amdgpu_top.1  dump.json  man.amdgpu_top.md  sample.json
src/: args.rs  cp_stat.rs  device_path.rs  drm_info.rs  dump_info.rs  dump_pp_table.rs  dump_process.rs  dump_xdna_device.rs  gem_info.rs  grbm.rs  grbm2.rs  gui.rs  json_output.rs  main.rs  misc.rs  pci.rs  sensors.rs  server.rs  srbm.rs  srbm2.rs  util.rs  vram_usage.rs
src/stat/: cp_stat.rs  fdinfo.rs  gem_info.rs  gpu_metrics.rs  grbm.rs  grbm2.rs  mod.rs  pc_type.rs  pci.rs  pcie_bw.rs  perf_counter.rs  pm_info.rs  sensors.rs  srbm.rs  srbm2.rs  utils.rs  vram_usage.rs
