[package]
name = "amdgpu_top"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Umio-Yasuno/amdgpu_top"
authors = ["Umio Yasuno <coelacanth_dream@proton.me>"]
description = """
Tool to displays AMDGPU usage.
The tool displays information gathered from performance counters (GRBM, GRBM2), sensors, fdinfo, gpu_metrics and AMDGPU driver.
"""
exclude = [
    "docs/",
    "assets/"
]

[features]
default = [ "tui", "gui", "json" ]
gui = ["dep:amdgpu_top_gui"]
tui = ["dep:amdgpu_top_tui"]
json = ["dep:amdgpu_top_json"]

[[bin]]
name = "amdgpu_top"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { path = "crates/libamdgpu_top" }
amdgpu_top_tui = { path = "crates/amdgpu_top_tui/", optional = true }
amdgpu_top_gui = { path = "crates/amdgpu_top_gui/", optional = true }
amdgpu_top_json = { path = "crates/amdgpu_top_json/", optional = true }

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1

# cargo-deb
[package.metadata.deb]
depends = "libc6, libgcc-s1, libdrm2, libdrm-amdgpu1"
section = "utils"
assets = [
    ["target/release/amdgpu_top", "usr/bin/", "755"],
    ["assets/amdgpu_top.desktop", "usr/share/applications/", "644"],
    ["docs/amdgpu_top.1", "usr/share/man/man1/", "644"],
]

# cargo-generate-rpm
[package.metadata.generate-rpm]
auto-req = "libdrm"
assets = [
    { source = "target/release/amdgpu_top", dest = "/usr/bin/", mode = "755" },
    { source = "assets/amdgpu_top.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "docs/amdgpu_top.1", dest = "/usr/share/man/man1/", mode = "644" },
]

[workspace]
members = [
    "crates/libamdgpu_top",
    "crates/amdgpu_top_tui",
    "crates/amdgpu_top_gui",
    "crates/amdgpu_top_json",
]
