[package]
name = "amdgpu_top"
version = "0.10.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/Umio-Yasuno/amdgpu_top"
authors = ["Umio Yasuno <coelacanth_dream@protonmail.com>"]
description = """
Tool to displays AMDGPU usage.
The tool displays information gathered from performance counters (GRBM, GRBM2), sensors, fdinfo, gpu_metrics and AMDGPU driver.
"""
exclude = [
    "docs/",
    "assets/"
]
build = "build.rs"

[features]
default = [ "libdrm_link", "tui", "gui", "json", "git_version" ]
package = [ "libdrm_link", "tui", "gui", "json" ]
dynamic_loading_feature = [ "libdrm_dynamic_loading", "tui", "gui", "json", "git_version" ]
dynamic_loading_package = [ "libdrm_dynamic_loading", "tui", "gui", "json" ]
gui = ["dep:amdgpu_top_gui"]
tui = ["dep:amdgpu_top_tui"]
json = ["dep:amdgpu_top_json", "dep:libc"]
git_version = ["dep:gix"]
libdrm_link = ["libamdgpu_top/libdrm_link"]
libdrm_dynamic_loading = ["libamdgpu_top/libdrm_dynamic_loading"]

[[bin]]
name = "amdgpu_top"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/libamdgpu_top",
    "crates/amdgpu_top_tui",
    "crates/amdgpu_top_gui",
    "crates/amdgpu_top_json",
]

[workspace.package]
version = "0.10.5"
edition = "2024"
authors = ["Umio Yasuno <coelacanth_dream@protonmail.com>"]
repository = "https://github.com/Umio-Yasuno/amdgpu_top"

[workspace.dependencies]
libamdgpu_top = { path = "crates/libamdgpu_top", version = "0.10.5", default-features = false }

[dependencies]
libamdgpu_top = { workspace = true }
amdgpu_top_tui = { path = "crates/amdgpu_top_tui/", version = "0.10.5", optional = true }
amdgpu_top_gui = { path = "crates/amdgpu_top_gui/", version = "0.10.5", optional = true }
amdgpu_top_json = { path = "crates/amdgpu_top_json/", version = "0.10.5", optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
gix = { version = "0.70", default-features = false, optional = true }

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1

# cargo-deb
[package.metadata.deb]
depends = "libc6, libgcc-s1, libdrm2, libdrm-amdgpu1"
section = "utils"
assets = [
    ["target/release/amdgpu_top", "usr/bin/", "755"],
    ["assets/amdgpu_top.desktop", "usr/share/applications/", "644"],
    ["assets/amdgpu_top-tui.desktop", "usr/share/applications/", "644"],
    ["assets/io.github.umio_yasuno.amdgpu_top.metainfo.xml", "usr/share/metainfo/", "644"],
    ["docs/amdgpu_top.1", "usr/share/man/man1/", "644"],
]

# cargo-generate-rpm
[package.metadata.generate-rpm]
auto-req = "libdrm"
assets = [
    { source = "target/release/amdgpu_top", dest = "/usr/bin/", mode = "755" },
    { source = "assets/amdgpu_top.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "assets/amdgpu_top-tui.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "assets/io.github.umio_yasuno.amdgpu_top.metainfo.xml", dest = "/usr/share/metainfo/", mode = "644" },
    { source = "docs/amdgpu_top.1", dest = "/usr/share/man/man1/", mode = "644" },
]

# cargo-appimage
[package.metadata.appimage]
assets = ["assets/"]
