[package]
name = "amdgpu_top_gui"
license = "MIT AND OFL-1.1"
description = "GUI Library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { workspace = true }
eframe = { version = "^0.29", default-features = false, features = [ "default_fonts", "glow", "persistence", "wayland" ] }
egui_plot = { version = "^0.29" }
i18n-embed = { version = "^0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "^0.9"
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
once_cell = "^1.18"
