[package]
name = "amdgpu_top_json"
version = "0.2.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Umio-Yasuno/amdgpu_top"
authors = ["Umio Yasuno <coelacanth_dream@protonmail.com>"]
description = "Library for JSON output function of amdgpu_top"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { path = "../libamdgpu_top", version = "0.2.2" }
serde_json = { version = "1.0.*" }
