[package]
name = "amdgpu_top_json"
license = "MIT"
description = "Library for JSON output function of amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { workspace = true }
serde_json = { version = "1" }
