[package]
name = "amdgpu_top_json"
license = "MIT"
description = "Library for JSON output function of amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["libamdgpu_top/libdrm_link"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["alloc", "std", "now"]}
libamdgpu_top = { workspace = true }
serde_json = { version = "1" }
