[package]
name = "amdgpu_top_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { path = "../libamdgpu_top" }
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
