[package]
name = "amdgpu_top_tui"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Umio-Yasuno/amdgpu_top"
authors = ["Umio Yasuno <coelacanth_dream@protonmail.com>"]
description = "TUI library for amdgpu_top"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { path = "../libamdgpu_top", version = "0.3.0" }
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
