[package]
name = "amdgpu_top_tui"
license = "MIT"
description = "TUI library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamdgpu_top = { workspace = true }
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
termsize = "0.1.9"

[lints.clippy]
collapsible_if = "allow"
single_element_loop = "allow"
