[package]
name = "libamdgpu_top"
license = "MIT"
description = "A library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["libdrm_link"]
libdrm_link = ["libdrm_amdgpu_sys/link_drm"]
libdrm_dynamic_loading = ["libdrm_amdgpu_sys/dynamic_loading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdrm_amdgpu_sys = { version = "0.8.9", git = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs", default-features = false, rev = "d0fb2e1708c3851368c4317eea430e34f745d804" }
nix = { version = "0", default-features = false, features = [ "ioctl" ] }
