[package]
name = "libamdgpu_top"
license = "MIT"
description = "A library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["libdrm_link"]
libdrm_link = ["libdrm_amdgpu_sys/link_drm"]
libdrm_dynamic_loading = ["libdrm_amdgpu_sys/dynamic_loading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdrm_amdgpu_sys = { version = "0.8.13", git = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs", default-features = false, rev = "7714cb3f810342d22c56154cf8501d072759709a" }
nix = { version = "0", default-features = false, features = [ "ioctl" ] }
num_enum = { workspace = true }
