[package]
name = "libamdgpu_top"
license = "MIT"
description = "A library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[features]
default = ["libdrm_link"]
libdrm_link = ["libdrm_amdgpu_sys/link_drm"]
libdrm_dynamic_loading = ["libdrm_amdgpu_sys/dynamic_loading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdrm_amdgpu_sys = { version = "0.8.16", git = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs", default-features = false, rev = "46c5aceeef63dbf7045453f69a3ccaf0d376b0fb" }
nix = { version = "0", default-features = false, features = [ "ioctl" ] }
num_enum = { workspace = true }
